config the route file

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <button type="button" class="btn btn-primary">Primary</button>
+<app-header></app-header>
 
 
 <router-outlet></router-outlet>
+<app-footer></app-footer>
